# ProcessTools-Win32

./: .gitignore  CMakeLists.txt  ProcessTools.sln  README.md  Windowsist.GUI.manifest  framework.h  manifest.xml
LaunchAppListEntry/: LaunchAppListEntry.vcxproj  LaunchAppListEntry.vcxproj.filters  WinMain.cpp  pch.h  readme.txt
Launcher/: Launcher.cpp  Launcher.rc  Launcher.vcxproj  Launcher.vcxproj.filters  Resource.aps  Resource.rc  StringTable.h  main.c  main.cpp  main.h  pch.h  resource.h
Launcher_Env/: Launcher_Env.cpp  Launcher_Env.rc  Launcher_Env.vcxproj  Resource.aps  Resource.rc  StringTable.h  framework.h  main.cpp  pch.h  resource.h
ShellOpener/: Resource.aps  Resource.rc  ShellOpener.vcxproj  ShellOpener.vcxproj.filters  main.c  main.cpp  main.h  resource.h
ShowCommandLine/: ShowCommandLine.rc  main.cpp  main.h  resource.h
ShowInvokeInfo/: Resource.aps  Resource.rc  ShowInvokeInfo.vcxproj  ShowInvokeInfo.vcxproj.filters  main.c  main.cpp  main.h  resource.h
exec/: Resource.aps  Resource.rc  Resource1.aps  exec.cpp  exec.rc  exec.vcxproj  framework.h  main.cpp  resource.h
exec_AsInvoker/: Resource.aps  Resource.rc  StringTable.h  exec_AsInvoker.cpp  exec_AsInvoker.rc  exec_AsInvoker.vcxproj  main.cpp  resource.h
exec_lite/: exec_lite.vcxproj  main.cpp
publish/: Launcher.ini  Launcher_Env.ini
src/: CMakeLists.txt
src/Launcher/: Resource.rc  StringTable.cpp  StringTable.h  StringTableContent  main.cpp  pch.h  resource.h
src/Launcher_Env/: Resource.rc  StringTable.cpp  StringTable.h  main.cpp  resource.h
src/ShellOpener/: Resource.rc  main.cpp
src/ShowCommandLine/: Resource.rc  main.cpp
src/ShowInvokeInfo/: Resource.rc  main.cpp  main.h
src/exec/: Resource.rc  StringTable.cpp  StringTable.h  StringTableContent  main.cpp  main.h  resource.h
src/exec_AsInvoker/: Resource.rc  StringTable.cpp  StringTable.h  main.cpp  pch.h  resource.h
src/exec_lite/: main.cpp
