cmake_minimum_required(VERSION 3.0.0)
project(exectools VERSION 0.1.0)

string(APPEND CMAKE_EXE_LINKER_FLAGS " /manifestdependency:\"type='win32' name='Microsoft.Windows.Common-Controls' version='6.0.0.0' processorArchitecture='amd64' publicKeyToken='6595b64144ccf1df' language='*'\"")
set(CMAKE_C_FLAGS_DEBUG "/MD /Zi /Ob0 /Od")
set(CMAKE_CXX_FLAGS_DEBUG "/MD /Zi /Ob0 /Od")
string(APPEND CMAKE_C_FLAGS " /GS-")
string(APPEND CMAKE_CXX_FLAGS " /GS-")

add_executable(exec WIN32 exec/Resource.rc exec/main.cpp)
add_executable(exec_AsInvoker WIN32 exec_AsInvoker/Resource.rc exec_AsInvoker/main.cpp)
add_executable(Launcher WIN32 Launcher/Resource.rc Launcher/main.cpp)
add_executable(Launcher_Env WIN32 Launcher_Env/Resource.rc Launcher_Env/main.cpp)
add_executable(ShellOpener WIN32 ShellOpener/Resource.rc ShellOpener/main.cpp)
add_executable(ShowCommandLine WIN32 ShowCommandLine/Resource.rc ShowCommandLine/main.cpp)
